@@ -4,12 +4,16 @@ import boat.carpetorgaddition.CarpetOrgAdditionConstants;
 import boat.carpetorgaddition.CarpetOrgAdditionSettings;
 import boat.carpetorgaddition.periodic.ServerComponentCoordinator;
 import boat.carpetorgaddition.rule.validator.ValueValidator;
+import boat.carpetorgaddition.rule.value.CommandPermissionLevel;
 import boat.carpetorgaddition.util.ServerUtils;
 import carpet.api.settings.CarpetRule;
+import carpet.api.settings.RuleCategory;
+import carpet.utils.CommandHelper;
 import net.minecraft.network.chat.Component;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerPlayer;
-import org.jetbrains.annotations.NotNull;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 
 import java.util.*;
 import java.util.function.BooleanSupplier;
@@ -18,41 +22,76 @@ import java.util.function.Predicate;
 import java.util.function.Supplier;
 
 public final class RuleFactory {
-    public static <T> Builder<T> create(Class<T> type, String rule, T value) {
+    @Deprecated(forRemoval = true)
+    public static <T> Builder<T> of(Class<T> type, String rule, T value) {
         return new Builder<>(type, rule, value);
+    }
+
+    public static Builder<Integer> of(String rule, int value) {
+        return new Builder<>(Integer.class, rule, value);
+    }
+
+    public static Builder<Long> of(String rule, long value) {
+        return new Builder<>(Long.class, rule, value);
+    }
+
+    public static Builder<Boolean> of(String rule, boolean value) {
+        return new Builder<>(Boolean.class, rule, value);
+    }
+
+    public static Builder<Float> of(String rule, float value) {
+        return new Builder<>(Float.class, rule, value);
+    }
+
+    public static Builder<Double> of(String rule, double value) {
+        return new Builder<>(Double.class, rule, value);
+    }
+
+    public static Builder<String> of(String rule, String value) {
+        return new Builder<>(String.class, rule, value);
+    }
+
+    public static Builder<CommandPermissionLevel> of(String rule, CommandPermissionLevel value) {
+        return new Builder<>(CommandPermissionLevel.class, rule, value);
+    }
+
+    public static <T extends Enum<T>> Builder<T> of(String rule, T value) {
+        return new Builder<>(value.getDeclaringClass(), rule, value);
     }
 
     public static final class Builder<T> {
         private final Class<T> type;
         private final String name;
-        private final Collection<String> categories = new ArrayList<>();
+        private final Collection<String> categories = new LinkedHashSet<>();
         private final Collection<String> suggestions;
-        @NotNull
+        @NonNull
         private final T value;
         private final List<ValueValidator<T>> validators = new ArrayList<>();
         private final List<SilenceValueValidator<T>> silenceValidators = new ArrayList<>();
         private final List<RuleListener<T>> listeners = new ArrayList<>();
         private final List<BooleanSupplier> conditions = new ArrayList<>();
-        private boolean canBeToggledClientSide = false;
+        private boolean client = false;
         private boolean strict = true;
-        private boolean isHidden;
-        private boolean isRemove;
+        private boolean hidden;
+        private boolean removed;
+        @Nullable
         private CustomRuleControl<T> control;
         private String displayName = "";
         private String displayDesc = "";
 
-        private Builder(Class<T> type, String rule, @NotNull T value) {
+        private Builder(Class<T> type, String rule, @NonNull T value) {
+            this.categories.add(CarpetOrgAdditionSettings.ORG);
             if (type != value.getClass()) {
                 // 基本数据类型和它们对应的包装类是不同的数据类型
                 throw new IllegalArgumentException("Rule %s: type mismatch - expected %s, actual %s"
                         .formatted(rule, type.getSimpleName(), value.getClass().getSimpleName()));
             }
-            this.type = type;
-            this.value = value;
-            this.name = rule;
             if (rule.isBlank()) {
                 throw new IllegalArgumentException("Carpet rule name is empty");
             }
+            this.type = type;
+            this.value = value;
+            this.name = rule;
             if (this.type == Boolean.class) {
                 // 不可变集合
                 this.suggestions = List.of("true", "false");
@@ -63,21 +102,16 @@ public final class RuleFactory {
                         .map(Enum::name)
                         .map(s -> s.toLowerCase(Locale.ROOT))
                         .toList();
+            } else if (this.type == CommandPermissionLevel.class) {
+                this.suggestions = List.of("true", "false", "ops", "0", "1", "2", "3", "4");
+                this.setCommand();
             } else {
-                this.suggestions = new ArrayList<>();
+                this.suggestions = new LinkedHashSet<>();
             }
-            this.categories.add(CarpetOrgAdditionSettings.ORG);
         }
 
         public Builder<T> addCategories(String... categories) {
-            return this.addCategories(List.of(categories));
-        }
-
-        public Builder<T> addCategories(List<String> list) {
-            if (list.isEmpty()) {
-                throw new IllegalArgumentException("At least one category must be provided");
-            }
-            this.categories.addAll(list);
+            this.categories.addAll(Arrays.asList(categories));
             return this;
         }
 
@@ -97,8 +131,27 @@ public final class RuleFactory {
             return this;
         }
 
+        /**
+         * 设置此规则为命令的开关，当规则值切换时，会将命令更改同步到客户端
+         */
+        public Builder<T> setCommand() {
+            this.categories.add(RuleCategory.COMMAND);
+            // 更改规则时将命令同步到客户端
+            return this.addListener((source, _) -> {
+                if (source != null) {
+                    CommandHelper.notifyPlayersCommandsChanged(source.getServer());
+                }
+            });
+        }
+
+        /**
+         * 设置为{@code Client}的规则，可以在未安装{@code Carpet}的服务器中通过{@code /carpet}或对应规则管理器的命令启用（尽管客户端无法解析命令）
+         *
+         * @see CarpetRule#canBeToggledClientSide()
+         */
         public Builder<T> setClient() {
-            this.canBeToggledClientSide = true;
+            this.client = true;
+            this.categories.add(RuleCategory.CLIENT);
             return this;
         }
 
@@ -137,25 +190,37 @@ public final class RuleFactory {
             return this;
         }
 
+        /**
+         * 将规则标记为隐藏，除非启用隐藏功能，否则隐藏的规则不会在游戏中显示
+         */
         public Builder<T> setHidden() {
             this.conditions.add(CarpetOrgAdditionConstants::isEnableHiddenFunction);
             this.addCategories(CarpetOrgAdditionSettings.HIDDEN);
-            this.isHidden = true;
+            this.hidden = true;
             return this;
         }
 
+        /**
+         * 将规则标记为已删除，已删除的规则不会在游戏中显示
+         */
         public Builder<T> setRemoved() {
             this.conditions.addFirst(() -> false);
-            this.isRemove = true;
+            this.removed = true;
             return this;
         }
 
-        public Builder<T> addValidator(Predicate<T> predicate, Supplier<Component> supplier) {
-            return this.addValidator(ValueValidator.of(predicate, supplier));
+        /**
+         * 添加规则验证器
+         *
+         * @param condition    用于验证规则值是否有效的条件
+         * @param errorMessage 规则值无效时，发送的命令反馈消息
+         */
+        public Builder<T> addValidator(Predicate<T> condition, Supplier<Component> errorMessage) {
+            return this.addValidator(ValueValidator.of(condition, errorMessage));
         }
 
-        public Builder<T> addValidator(ValueValidator<T> valueValidators) {
-            this.validators.add(valueValidators);
+        public Builder<T> addValidator(ValueValidator<T> validator) {
+            this.validators.add(validator);
             return this;
         }
 
@@ -171,13 +236,13 @@ public final class RuleFactory {
         }
 
         public RuleContext<T> build() {
-            Supplier<CarpetRule<T>> supplier = () -> new OrgRule<>(
+            Supplier<BuiltRule<T>> supplier = () -> new BuiltRule<>(
                     this.type,
                     this.name,
                     this.categories,
                     this.suggestions,
                     this.value,
-                    this.canBeToggledClientSide,
+                    this.client,
                     this.validators,
                     this.silenceValidators,
                     this.listeners,
@@ -193,8 +258,8 @@ public final class RuleFactory {
                     this.conditions,
                     this.categories,
                     this.suggestions,
-                    this.isRemove,
-                    this.isHidden,
+                    this.removed,
+                    this.hidden,
                     this.control
             );
         }
